# python-project-lvl1

./: .bash_history  .gitconfig  .python_history  .viminfo  man  pyproject.toml
.cache/pip/wheels/ed/59/9d/3b73910bc4e92d29952f823a0333eb890f6ed8f45fc2779fe0/: pyrsistent-0.14.11-cp36-cp36m-linux_x86_64.whl
brain_games/scripts/: brain_games.py
webiiss_brain_games.egg-info/: PKG-INFO  SOURCES.txt
